# xbmc

./: .gitignore  Makefile.in  bootstrap.mk  codegenerator.mk  configure.in
Kodi.xcodeproj/: project.pbxproj
XBMC-ATV2.xcodeproj/: project.pbxproj
XBMC-IOS.xcodeproj/: project.pbxproj
XBMC.xcodeproj/: project.pbxproj
addons/library.xbmc.addon/: libXBMC_addon.h
docs/: README.ios  README.linux
language/English/: strings.po  strings.xml
language/German/: strings.xml
language/Hungarian/: strings.xml
lib/: DllAvUtil.h
lib/ffmpeg/: configure
lib/libnfs/: Makefile
lib/libshairplay/: Makefile
project/VS2010Express/: XBMC for Windows.sln  XBMC.vcxproj  XBMC.vcxproj.filters  XbmcCommons.vcxproj
project/Win32BuildSetup/: BuildSetup.bat  XBMC for Windows.nsi  genNsisIncludes.bat  genNsisInstaller.nsi
system/settings/: darwin_osx.xml  settings.xml
system/shaders/: 420fToRGB.glsl  f420ToRGB.glsl
tools/TexturePacker/: SimpleFS.h  TexturePacker.cpp
tools/buildsteps/: defaultenv
tools/depends/: configure.in  xbmc-addons.include
tools/depends/native/TexturePacker/src/: DecoderManager.cpp  Makefile.am  configure.ac
tools/depends/native/TexturePacker/src/decoder/: GifHelper.cpp  JPGDecoder.cpp
userdata/: airplay.xml.airserver
xbmc/: Application.cpp  ApplicationMessenger.cpp  ApplicationMessenger.h  DllPaths_generated.h.in  DllPaths_win32.h  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  Util.cpp  Util.h  system.h
xbmc/addons/: AddonCallbacksAddon.cpp  AddonInstaller.cpp
xbmc/filesystem/: CurlFile.cpp  DirectoryFactory.cpp  DllLibNfs.h  File.cpp  FileDirectoryFactory.cpp  FileNFS.cpp  FileNFS.h  Makefile.in  NFSDirectory.cpp  NFSFile.cpp  PipesManager.cpp  PipesManager.h  PosixDirectory.cpp  PosixDirectory.h  SpecialProtocol.cpp  SpecialProtocol.h  iso9660.cpp
xbmc/guilib/: FrameBufferObject.h  GUIBaseContainer.cpp  GUIControlFactory.cpp  GUIImage.cpp  GUIImage.h  GUIShader.cpp  GUIShader.h  GUITexture.cpp  GUITexture.h  GUITextureGL.h  MatrixGLES.cpp  Shader.h  TextureManager.cpp  gui3d.h  imagefactory.cpp
xbmc/interfaces/: Builtins.cpp
xbmc/linux/: AmVideoCap.cpp  Makefile.in  PlatformDefs.h  XMemUtils.cpp
xbmc/main/: main.cpp
xbmc/network/: AirPlayServer.cpp  AirPlayServer.h  AirTunesServer.cpp  AirTunesServer.h  NetworkServices.cpp  NetworkServices.h  WebServer.cpp
xbmc/osx/: CocoaInterface.h  CocoaInterface.mm  CoreAudio.cpp  CoreAudio.h  DarwinUtils.h  DarwinUtils.mm  IOSEAGLView.h  IOSEAGLView.mm  IOSExternalTouchController.mm  IOSScreenManager.mm  Makefile.in  XBMCHelper.cpp  XBMCHelper.h
xbmc/pictures/: DllLibGif.h  DllLibRaw.h  GUIWindowPictures.cpp  Gif.cpp  (+8 more)
(+216 files in other folders)
